lib/tests/fixtures/compiler/parser/defined_type_default_value_assignment.baseline
Error: defined_type_default_value_assignment.pp:1:22: assignment expressions are not allowed in parameter default values.
  define bad($param = ($wrong = 1)) {
                       ^~~~~~~~~~
