lib/tests/fixtures/compiler/parser/defined_type_default_value_assignment.pp
define bad($param = ($wrong = 1)) {

}

bad { foo: }
